@@ -1,6 +1,7 @@
 # Generated by roxygen2: do not edit by hand
 
 S3method(dim,flextable)
+S3method(format,flextable)
 S3method(knit_print,flextable)
 S3method(print,flextable)
 export(add_footer)
